fix filter overlap issue, fixes #7177
test plan:
* go to your inbox
* make your browser window small
* ensure that you can still see conversations on the left hand side

Reviewed-on: https://gerrit.instructure.com/8520
Tested-by: Hudson <hudson@instructure.com>

--- a/app/stylesheets/messages.sass
+++ b/app/stylesheets/messages.sass
@@ -7,7 +7,7 @@ body
   a
     color: #2571bd
 #actions
-  height: 42px
+  min-height: 42px
   background: #dddde1 url(/images/messages/actions-bg.png) 0 0 repeat-x
   border-top: 1px solid #eaeaec
   border-bottom: 1px solid #acacac
@@ -34,7 +34,7 @@ body
   .menus
     float: left
     font-size: 0.9em
-    margin: 7px 0 0 16px
+    margin: 7px 0 2px 16px
     > li
       float: left
       position: relative
